# Parolu

./: .gitignore  README.md  im.bernard.Parolu.json  meson.build  parolu.gresource  pip-dependencies.json  python-flatpak-deps.json  requirements.txt
data/: im.bernard.Parolu.desktop.in  im.bernard.Parolu.gresource.xml  im.bernard.Parolu.metainfo.xml  im.bernard.Parolu.metainfo.xml.in
models/: meson.build
patches/: meson.build
po/: de.po  parolu.pot
src/: main.py  meson.build  parolu.in  pipervoice.py  reader.py  voice_manager.ui  window.py  window.ui
subprojects/piper-src/: meson.build
subprojects/piper-src/src/cpp/: CMakeLists.txt
subprojects/piper-src/src/python_run/piper/: voices.json
