install_data('eo-ludoviko-medium.onnx',
  install_dir: get_option('datadir') / 'parolu' / 'models' /  'eo' / 'eo-ludoviko-medium'
)

install_data('eo-ludoviko-medium.onnx.json',
  install_dir: get_option('datadir') / 'parolu' / 'models' /  'eo' / 'eo-ludoviko-medium'
)

install_data('eo-gosia-medium.onnx',
  install_dir: get_option('datadir') / 'parolu' / 'models' /  'eo' / 'eo-gosia-medium'
)

install_data('eo-gosia-medium.onnx.json',
  install_dir: get_option('datadir') / 'parolu' / 'models' /  'eo' / 'eo-gosia-medium'
)